2009-06-10  Thomas Moulard  <thomas.moulard@gmail.com>

	Synchronize.
	* doc/sf-upload.sh.in: Here.

2009-06-10  Thomas Moulard  <thomas.moulard@gmail.com>

	Synchronize.
	* build-aux/boost.m4: New.
	* build-aux/deb.mk: New.
	* build-aux/doxygen.m4: New.
	* build-aux/ebuild.mk: New.
	* build-aux/init.mk: Synchronize.
	* build-aux/move-if-change: New.
	* build-aux/pkg-config.mk: New.
	* build-aux/pkg-config.pc.in: New.
	* build-aux/rpm.mk: New.
	* configure.ac,
	* doc/Doxyfile.in,
	* doc/Makefile.am,
	* doc/sf-upload.sh.in: Synchronize.

2009-06-08  Thomas Moulard  <thomas.moulard@gmail.com>

	Update to new interface.
	* include/roboptim/core/plugin/ipopt.hh,
	* src/doc.hh,
	* src/roboptim-core-ipopt-plugin.cc,
	* tests/hs071.hh: Update to new interface and document.
	* tests/plugin.stdout,
	* tests/simple.stdout: Regenerate.

2009-06-02  Thomas Moulard  <thomas.moulard@gmail.com>

	Remove pkg.m4.
	* build-aux/pkg.m4: Remove.

2009-06-02  Thomas Moulard  <thomas.moulard@gmail.com>

	Add Libtool rules.
	* Makefile.am: Here.

2009-06-02  Thomas Moulard  <thomas.moulard@gmail.com>

	Link against all Ipopt dependencies.
	* src/Makefile.am: Here.

2009-06-02  Thomas Moulard  <thomas.moulard@gmail.com>

	Make Libtool support more robust, link against roboptim-core.
	* .gitignore: Remove committed files from ignore list.
	* build-aux/bootstrap: Remove force flag from autoreconf call.
	* build-aux/config.guess: New.
	* build-aux/config.sub: New.
	* build-aux/depcomp: New.
	* build-aux/install-sh: New.
	* build-aux/libtool.m4: New.
	* build-aux/ltmain.sh: New.
	* build-aux/ltoptions.m4: New.
	* build-aux/ltsugar.m4: New.
	* build-aux/ltversion.m4: New.
	* build-aux/lt~obsolete.m4: New.
	* build-aux/missing: New.
	* configure.ac: Remove unneeded macro.
	* src/Makefile.am: Link against roboptim-core.

2009-05-27  Thomas Moulard  <thomas.moulard@gmail.com>

	Distribute pkg.m4.
	* build-aux/pkg.m4: New.

2009-05-26  Thomas Moulard  <thomas.moulard@gmail.com>
