@@ -1,5 +1,8 @@
 include $(top_srcdir)/build-aux/init.mk
 
+# Add RobOptim flags.
+AM_CPPFLAGS += $(ROBOPTIMCORE_CFLAGS)
+
 # Add available warnings flags.
 AM_CXXFLAGS += $(WARNING_CXXFLAGS)
 
